# Scout-Backend

./: .dockerignore  .env.example  .env.test  .firebaserc  .gitignore  Dockerfile  Makefile  README.md  firebase.json  firestore.indexes.json  firestore.rules  pyproject.toml  storage.rules
.github/workflows/: cd.yml  ci.yml  test.yml
app/: main.py
app/api/v1/: config.py  deps.py  legal.py  lists.py  reviews.py  spots.py  users.py
app/core/: config.py  exceptions.py  firebase.py  ratelimit.py  security.py
app/schemas/: config.py  enums.py  error.py  legal.py  list.py  pagination.py  review.py  spot.py  user.py
app/services/: aggregates.py  geo.py  geocoding.py  list_service.py  review_service.py  spot_cache.py  spot_service.py  storage_service.py  summary_service.py  user_service.py
docs/: ios-upload-contract.md
public/: index.html  privacy.html  support.html  terms.html
scripts/: discover_spots.py  reset_seed_data.py  seed_fake_data.py  seed_real_data.py  seed_spots.py  spot_templates.py
tests/: conftest.py
tests/helpers/: emulator_auth.py
tests/integration/: test_ai_summary.py  test_auth.py  test_config.py  test_delete_review.py  test_delete_user.py  test_edit_review.py  test_full_flow.py  test_legal.py  test_lists.py  test_reviews_fetch.py  test_reviews_search.py  test_spots_get.py  test_spots_query.py  test_spots_search.py  test_submit_existing_spot.py  test_submit_with_new_spot.py  test_users_me.py
tests/unit/: conftest.py  test_aggregates.py  test_geo.py  test_geocoding_parse.py  test_image_validation.py  test_review_sort.py  test_schemas.py  test_spot_cache.py  test_summary_service.py
