[project]
name = "scout-backend"
version = "0.1.0"
description = "Scout — photo spot discovery backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "firebase-admin>=6.4",
    "google-cloud-firestore>=2.14",
    "google-cloud-storage>=2.14",
    "pillow>=10.2",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "requests>=2.31",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Only `app` is the Python package. Restrict discovery so non-code top-level
# dirs (e.g. public/ for Firebase Hosting) don't trip flat-layout auto-discovery.
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
